--- a/lungis.html
+++ b/lungis.html
@@ -221,8 +221,7 @@
             border-radius: 15px;
             padding: 20px;
             height: fit-content;
-            position: sticky;
-            top: 100px;
+            position: static;
         }
         .filter-section { margin-bottom: 24px; }
         .filter-title {
@@ -388,6 +387,30 @@
             100% { transform: scale(1); }
         }
 
+        .add-to-cart-btn {
+            position: absolute;
+            bottom: 0;
+            right: 0;
+            background: linear-gradient(135deg, #e74c3c, #c0392b);
+            border: none;
+            border-radius: 8px 0 0 0;
+            padding: 8px 16px;
+            color: white;
+            font-size: 12px;
+            font-weight: 600;
+            cursor: pointer;
+            box-shadow: 0 2px 8px rgba(231, 76, 60, 0.3);
+            transition: all 0.2s ease;
+            z-index: 10;
+            opacity: 0.9;
+        }
+        .add-to-cart-btn:hover {
+            background: linear-gradient(135deg, #c0392b, #a93226);
+            transform: translateY(-2px);
+            box-shadow: 0 4px 12px rgba(231, 76, 60, 0.4);
+            opacity: 1;
+        }
+
         .product-info { padding: 16px; }
         .product-brand { font-size: 12px; color: #666; margin-bottom: 4px; }
         .product-name {
@@ -514,6 +537,9 @@
                         <button class="wishlist-btn" onclick="toggleWishlist(event, 'traditional-cotton-white')">
                             <i class="far fa-heart"></i>
                         </button>
+                        <button class="add-to-cart-btn" onclick="addToCart(event, 'traditional-cotton-white')">
+                            Add to Cart
+                        </button>
                     </div>
                     <div class="product-info">
                         <div class="product-brand">Lunsara</div>
@@ -531,6 +557,9 @@
                         <img src="images/lungi_collection.jpg" alt="Blue Checkered Cotton Lungi">
                         <button class="wishlist-btn" onclick="toggleWishlist(event, 'blue-checkered-cotton')">
                             <i class="far fa-heart"></i>
+                        </button>
+                        <button class="add-to-cart-btn" onclick="addToCart(event, 'blue-checkered-cotton')">
+                            Add to Cart
                         </button>
                     </div>
                     <div class="product-info">
@@ -550,6 +579,9 @@
                          <button class="wishlist-btn" onclick="toggleWishlist(event, 'green-striped-lungi')">
                             <i class="far fa-heart"></i>
                         </button>
+                        <button class="add-to-cart-btn" onclick="addToCart(event, 'green-striped-lungi')">
+                            Add to Cart
+                        </button>
                     </div>
                     <div class="product-info">
                          <div class="product-brand">Lunsara</div>
@@ -567,6 +599,9 @@
                         <img src="images/lungi_collection.jpg" alt="Orange Floral Lungi">
                         <button class="wishlist-btn" onclick="toggleWishlist(event, 'orange-floral-lungi')">
                             <i class="far fa-heart"></i>
+                        </button>
+                        <button class="add-to-cart-btn" onclick="addToCart(event, 'orange-floral-lungi')">
+                            Add to Cart
                         </button>
                     </div>
                     <div class="product-info">
@@ -586,6 +621,9 @@
                         <button class="wishlist-btn" onclick="toggleWishlist(event, 'cream-solid-lungi')">
                             <i class="far fa-heart"></i>
                         </button>
+                        <button class="add-to-cart-btn" onclick="addToCart(event, 'cream-solid-lungi')">
+                            Add to Cart
+                        </button>
                     </div>
                     <div class="product-info">
                         <div class="product-brand">Lunsara</div>
@@ -603,6 +641,9 @@
                         <img src="images/lungi_collection.jpg" alt="Multi-color Lungi">
                         <button class="wishlist-btn" onclick="toggleWishlist(event, 'multi-color-lungi')">
                             <i class="far fa-heart"></i>
+                        </button>
+                        <button class="add-to-cart-btn" onclick="addToCart(event, 'multi-color-lungi')">
+                            Add to Cart
                         </button>
                     </div>
                     <div class="product-info">
@@ -622,6 +663,9 @@
                         <button class="wishlist-btn" onclick="toggleWishlist(event, 'navy-blue-lungi')">
                             <i class="far fa-heart"></i>
                         </button>
+                        <button class="add-to-cart-btn" onclick="addToCart(event, 'navy-blue-lungi')">
+                            Add to Cart
+                        </button>
                     </div>
                     <div class="product-info">
                         <div class="product-brand">Lunsara</div>
@@ -639,6 +683,9 @@
                         <img src="images/lungi_collection.jpg" alt="Red Checkered Lungi">
                         <button class="wishlist-btn" onclick="toggleWishlist(event, 'red-checkered-lungi')">
                             <i class="far fa-heart"></i>
+                        </button>
+                        <button class="add-to-cart-btn" onclick="addToCart(event, 'red-checkered-lungi')">
+                            Add to Cart
                         </button>
                     </div>
                     <div class="product-info">
@@ -836,6 +883,42 @@
                 localStorage.setItem('selectedProduct', JSON.stringify(productDetails));
                 window.location.href = 'product-detail.html';
             }
+        }
+
+        function addToCart(event, productId) {
+            event.stopPropagation();
+            const product = productDatabase[productId];
+            if (!product) return;
+
+            // Get existing cart or create new one
+            const cart = JSON.parse(localStorage.getItem('cart')) || [];
+
+            // Check if product already exists in cart
+            const existingProduct = cart.find(item => item.id === productId);
+
+            if (existingProduct) {
+                // Increase quantity if product already exists
+                existingProduct.quantity += 1;
+            } else {
+                // Add new product to cart
+                cart.push({
+                    ...product,
+                    quantity: 1,
+                    dateAdded: new Date().toISOString()
+                });
+            }
+
+            // Save cart to localStorage
+            localStorage.setItem('cart', JSON.stringify(cart));
+
+            // Update cart count in header
+            updateWatchlistCount();
+
+            // Show notification
+            showNotification('Added to Cart', `"${product.name}" has been added to your cart!`, 'fas fa-shopping-cart', 'success');
+
+            // Dispatch event for other components that might be listening
+            window.dispatchEvent(new CustomEvent('cartUpdated'));
         }
         
         function handleLogout(event) {
